--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game",
+  "name": "player-trial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +41,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
