--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "card-deck-package": "^1.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-compound-timer": "1.2.0",
     "react-dom": "^17.0.2",
     "react-flippy": "^1.1.0",
     "react-playing-card": "^0.2.5",
